-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
QO 2025-02-17
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Overflowed constant
The overflowed value due to arithmetic on constants is too small or unexpectedly negative, causing incorrect computations. Integer overflow occurs in arithmetic on constant operands
/data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/query/planner_wildcard_helpers.cpp:108: INTEGER_OVERFLOW 151825 "i" = "0UL", its value is now 0.
/data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/query/planner_wildcard_helpers.cpp:114: INTEGER_OVERFLOW 151825 Expression "i - 1UL", which is equal to 18446744073709551615, where "i" is known to be equal to 0, underflows the type that receives it, an unsigned integer 64 bits wide.