SERVER-101227: Rewrite field path matcher to avoid potential index underflow (#33096)

GitOrigin-RevId: a3d3021c00b52f8e07f48c67eb2d7f22e215c20c